GO 38: User setup two-factor VerifyOTPAuthentication vs Login two-factor
